# vozctl

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  pyproject.toml
.beads/: issues.jsonl
docs/research/: tiny-recursive-models.md  voice-coding-platform.md
scripts/: download-models.sh
src/vozctl/: __init__.py  __main__.py  actions.py  audio.py  commands.py  context.py  diagnostics.py  engine.py  formatters.py  intent.py  self_test.py  stt.py  vad.py
tests/: test_commands.py
